k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ejemplo-microservice
  labels:
    app: ejemplo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ejemplo
  template:
    metadata:
      labels:
        app: ejemplo
    spec:
      containers:
        - name: ejemplo-app
          image: darkfloppa/ejemplo:PLACEHOLDER_IMAGE_TAG
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ejemplo-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ejemplo
