k8s/istio-specs.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ejemplo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ejemplo-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - ejemplo-gateway
  http:
    - match:
        - uri:
            prefix: /api/productos
      route:
        - destination:
            host: ejemplo-service
            port:
              number: 8080
